[gd_scene load_steps=18 format=3 uid="uid://bqgo56wirqsy2"]

[ext_resource type="PackedScene" uid="uid://cpnfo7hdx0oxg" path="res://default_scene_base.tscn" id="1_dyeri"]
[ext_resource type="Script" uid="uid://dqba1ncoreeq4" path="res://levels/level_2_briefing.gd" id="2_a81k6"]
[ext_resource type="PackedScene" uid="uid://dcr8tvptx5285" path="res://assets/buildings/army_tent.glb" id="2_e0ud1"]
[ext_resource type="PackedScene" uid="uid://b8e7ebkdguro8" path="res://custom_scenes/dialogue_manager.tscn" id="3_0j5n4"]
[ext_resource type="PackedScene" uid="uid://41fv2ptcljjp" path="res://custom_scenes/team_captain.tscn" id="4_v6mhn"]
[ext_resource type="Texture2D" uid="uid://b3gq1qnf34ml1" path="res://textures/sky/belfast_sunset_puresky_4k.hdr" id="4_xegxb"]
[ext_resource type="PackedScene" uid="uid://3a6wjr3a13vd" path="res://assets/meshes/teleport/teleport.tscn" id="7_8xt3a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0j5n4"]
size = Vector3(8, 0.2, 8)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xegxb"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_v6mhn"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_a81k6"]
in_3d_space = true
seamless = true
seamless_blend_skirt = 0.733
noise = SubResource("FastNoiseLite_v6mhn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xegxb"]
albedo_color = Color(0.359069, 0.359069, 0.359069, 1)
metallic = 1.0
metallic_specular = 0.0
metallic_texture = SubResource("NoiseTexture2D_xegxb")
roughness_texture = SubResource("NoiseTexture2D_a81k6")

[sub_resource type="BoxMesh" id="BoxMesh_8xt3a"]
material = SubResource("StandardMaterial3D_xegxb")
size = Vector3(15, 0.2, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_e0ud1"]
size = Vector3(1, 5, 8)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_8xt3a"]
panorama = ExtResource("4_xegxb")
energy_multiplier = 0.15

[sub_resource type="Sky" id="Sky_ff7d2"]
sky_material = SubResource("PanoramaSkyMaterial_8xt3a")

[sub_resource type="Environment" id="Environment_2dsa0"]
background_mode = 2
sky = SubResource("Sky_ff7d2")
ambient_light_sky_contribution = 0.0
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_density = 0.0024

[node name="Level2Briefing" node_paths=PackedStringArray("left_controller", "right_controller") instance=ExtResource("1_dyeri")]
script = ExtResource("2_a81k6")
scene = "uid://bf88eeqpgtid3"
left_controller = NodePath("XROrigin3D/LeftHand")
right_controller = NodePath("XROrigin3D/RightHand")

[node name="Environment" type="Node3D" parent="." index="1"]

[node name="army_tent" parent="Environment" index="0" instance=ExtResource("2_e0ud1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.33121)

[node name="Floor" type="StaticBody3D" parent="Environment" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -2.331)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor" index="0"]
visible = false
shape = SubResource("BoxShape3D_0j5n4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0242615, 0.014056, -0.0131292)
mesh = SubResource("BoxMesh_8xt3a")

[node name="Walls" type="Node3D" parent="Environment" index="2"]
visible = false

[node name="WorldWall" type="StaticBody3D" parent="Environment/Walls" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.284, 0, -2.236)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WorldWall" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_e0ud1")

[node name="WorldWall2" type="StaticBody3D" parent="Environment/Walls" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.28417, 0, -2.2359)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WorldWall2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_e0ud1")

[node name="WorldWall3" type="StaticBody3D" parent="Environment/Walls" index="2"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 1.28078)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WorldWall3" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_e0ud1")

[node name="WorldWall4" type="StaticBody3D" parent="Environment/Walls" index="3"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0164585, 0.00949883, -5.92923)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WorldWall4" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_e0ud1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment" index="3"]
environment = SubResource("Environment_2dsa0")

[node name="OmniLight3D" type="OmniLight3D" parent="Environment" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0724175, 2.01536, -2.50185)
omni_range = 9.136
omni_attenuation = 0.855

[node name="DialogueManager" parent="." index="2" node_paths=PackedStringArray("xr_origin_3d", "xr_camera", "dialogue_button_hand", "dialogue_toggler_hand") instance=ExtResource("3_0j5n4")]
xr_origin_3d = NodePath("../XROrigin3D")
xr_camera = NodePath("../XROrigin3D/XRCamera3D")
dialogue_button_hand = NodePath("../XROrigin3D/RightHand")
dialogue_toggler_hand = NodePath("../XROrigin3D/RightHand")

[node name="TeamCaptain" parent="." index="3" instance=ExtResource("4_v6mhn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55765, 0, -4.82183)

[node name="Teleport" parent="." index="4" instance=ExtResource("7_8xt3a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.6651, -5.96046e-08, -0.814262)
scene = "uid://cpnfo7hdx0oxg"
